# flutter_mupdf

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
clib/: .gitignore  CMakeLists.txt  libmypdf.cc  libmypdf.def  libmypdf.h  mupdf_wrapper.cc  mupdf_wrapper.def  mupdf_wrapper.h  mupdf_wrapper_test.cc
lib/: clibmypdf.dart  flutter_mupdf.dart  flutter_pdf_plugin.dart  flutter_pdf_plugin_web.dart  pdf_text.dart  pdf_text.g.dart
lib/src/: flutter_mupdf.dart  mupdf_wrapper.dart
test/: flutter_mupdf_test.dart  flutter_pdf_plugin_test.dart
